--- a/app/views/universities/index.html.erb
+++ b/app/views/universities/index.html.erb
@@ -24,4 +24,11 @@
 
 <br />
 
+<h3>Enter keyword</h3>
+<form action ="universities/search" method="post">
+<input name = "key" type="input" />
+<input value="Send" type="submit"/>
+</form> 
+
+
 <%= link_to 'New University', new_university_path %>
