--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,8 @@
               <li><a href="/universities">University</a></li>
               <li><%= link_to 'Contact', pages_contact_path %></li>
               <li><%= link_to 'About us', pages_aboutus_path %></li>
-              <li><a href="/login">Login</a></li>
+              <li><a href="/sign_up">SignUp</a></li>
+              <li><a href="/log_in">Login</a></li>
             </ul>
       </div>
     </p>
