--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,9 @@
     <div id="page">
-    <h1>Obtaining Knowledge Is Power</h1>
+    <h1>University Window - Obtaining Knowledge Is Power</h1>
     <p>
       <div id="content">Are you looking for the best university close to you to attend? Then begin the road to success...
-      find the <a href="/universities">university</a> for your future.
+      search and add the <a href="/universities">university</a> for the future.
+      <%= image_tag("search2.jpg", :alt => "Education", :class=> "round")%>
       </div>
       <div id="sidebar"><h3>Quick Links</h3>
             <ul class="links">
