--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,7 +1,10 @@
 <div id="page"><h1>Contact Details</h1>
   <div id="content">
   <p>Please click <a href="http://www.eduroute.info">here</a> to get
-further details and contacts on universities.</p></div>
+further details and contacts on universities. You can also reach us on:
+  <li><strong>Phone number</strong> +447748179270</li>
+  <li><strong>Email</strong> eseosaoshodin@yahoo.com</li></p>
+  <%= image_tag("contact.jpg", :alt => "Education", :class=> "round")%></div>
   <div id="sidebar"><h3>Quick Links</h3>
             <ul class="links">
               <li><a href="/universities">University</a></li>
