--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -25,5 +25,5 @@
   <%= f.password_field :password_confirmation %>
 </p>
 
-<p class= "button"><%= f.submit %></p>
+<p class= "button"><%= f.submit %> or <a href="/log_in">Login</a> </p>
 <% end %>
