--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,17 +50,7 @@
   </head>
   <body>
     <div class="container">
-      <header>
-        <%= image_tag("logo.png", :alt => "Education", :class=> "round")%>
-        <nav class="round">
-          <ul>
-            <li><%= link_to "Home", pages_home_path %></li>
-            <li><%= link_to "About us", pages_aboutus_path %></li>
-            <li><%= link_to "Contact", pages_contact_path %></li>
-            <li><%= link_to "Help", pages_help_path %></li>
-          </ul>
-        </nav>
-      </header>
+      <%= render 'layouts/header' %>
        <% flash.each do |name, msg| %>  
 
        <%= content_tag :div, msg, :id => "flash#{name}" %>  
@@ -70,6 +60,7 @@
     
       <%= yield %>
       <%= render 'layouts/footer' %>
+      
     </div>
   </body>
 </html>
